test/programs/error-overlapping-patterns-multiple.defs
(def (a b $x ..) _)
(def (a b $x .. c) _)
(def (a b $x .. ($y ..) d) _)